# comment-docx

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
agent_skill/comment-docx/: SKILL.md
resources/: .gitignore  бескупонные_облигации.docx
src/comment_docx/: __init__.py  __main__.py  cli.py  commenter.py
tests/: test_cli.py  test_commenter.py
