[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comment-docx"
version = "0.1.0"
description = "Agent-friendly DOCX commenting using LLM-selected run ranges."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "openai>=2.8.1",
    "pydantic>=2.12.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
comment-docx = "comment_docx.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
where = ["src"]
